tdf#115890 sw: fix invalid cast in SwContentTree::GetEntryAltText()

AccessibleListBoxEntry calls this for any entry.

This was always broken but now we have asserts to tell us about it.

Change-Id: I7094a1dfbffd359e0f536ca60cba2478e2a62464
Reviewed-on: https://gerrit.libreoffice.org/57086
Reviewed-by: Michael Stahl <Michael.Stahl@cib.de>
Tested-by: Jenkins
(cherry picked from commit 2986f4baa8bdef1f9ab9108240ea890075321be1)
Reviewed-on: https://gerrit.libreoffice.org/57099
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>