sw/source/uibase/utlui/content.cxx
@@ -902,7 +902,7 @@ Size SwContentTree::GetOptimalSize() const
 
 OUString SwContentTree::GetEntryAltText( SvTreeListEntry* pEntry ) const
 {
-    if( pEntry == nullptr)
+    if (pEntry == nullptr || !lcl_IsContent(pEntry))
         return OUString();
 
     assert(pEntry->GetUserData() == nullptr || dynamic_cast<SwContent*>(static_cast<SwTypeNumber*>(pEntry->GetUserData())));
